k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: ghcr.io/kelysaina/gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: microservices
spec:
  selector:
    app: gateway
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30000
  type: NodePort
